[fixed] error con el swagger
